xorg-server (2:1.7.3-1) UNRELEASED; urgency=low

  [ Julien Cristau ]
  * Enable GLX 1.4 on DRI2 and swrast (from upstream, via F12).
  * xserver-xorg-dev: add Depends on x11proto-kb-dev and libxkbfile-dev for
    xkbsrv.h (closes: #559676).  Thanks, Ron!

  [ Timo Aaltonen ]
  * New upstream release.

 -- Timo Aaltonen <tjaalton@ubuntu.com>  Fri, 04 Dec 2009 15:08:55 +0200

xorg-server (2:1.7.2-2) experimental; urgency=low

  [ Julien Cristau ]
  * debian/rules: upstream build system got fixed, no need to remove
    configure-generated files.
  * Steal input_id helper from udev, install it in /lib/xorg.  Thanks, Martin
    Pitt!

  [ Brice Goglin ]
  * Cherry pick upstream commit to fix the ABI.

 -- Brice Goglin <bgoglin@debian.org>  Mon, 30 Nov 2009 20:10:27 +0100

xorg-server (2:1.7.2-1) experimental; urgency=low

  * New upstream release
    + Xorg sets umask to 022 (closes: #555308)
  * Delete 09_debian_xserver_rtff.diff.  Was disabled since 1.3.99, and is not
    necessary since the fall back to builtin fonts was added.
  * Change the server's dependency on xserver-common to >= ${source:Version},
    to allow installation of different versions of the various servers.
  * Add build-dep on libglib2.0-dev, xkb-data and x11-xkb-utils for unit
    tests, and run the tests unless nocheck is in DEB_BUILD_OPTIONS.
  * Cherry-pick upstream commit to turn ModeDebug on during server startup,
    replacing our Turn-on-ModeDebug-by-default.patch.
  * Number our patches to make it easier to keep track of things.  Requested
    by the Ubuntu folks.
  * xvfb-run: retry a few times if Xvfb can't be started when using
    --auto-servernum, to make concurrent invocations work (closes: #521075).
    Thanks, Kees Cook!
  * Use libudev instead of libhal for input hotplug on linux.
  * Add udev rule to get keymap from /etc/default/keyboard.

 -- Julien Cristau <jcristau@debian.org>  Sat, 28 Nov 2009 16:48:43 +0100

xorg-server (2:1.7.0-1) experimental; urgency=low
